# Aulas-Crewai-Sandeco

./: .gitignore  README.md  agente-pos.py  crawler-delivery.py  dog.py  main.py  pesquisador.py  pyproject.toml  requirements.txt  resultado-pesquisador.txt  resultado_scraping.json  teste.py
db/: chroma.sqlite3
ebook-agentes2/cap02/graph/: app.py  pdf_report.py  template.md
ebook-agentes2/cap02/math/: math_for_kids.py  math_tool.py
ebook-agentes2/cap04/agentic-plataform/: app.py
ebook-agentes2/cap04/agentic-plataform/crews/: mycustomduckduck.py  pdf_resumo_crew.py  post_crew.py  search_crew.py  translate_crew.py
ebook-agentes2/cap04/agentic-plataform/images/: _my_images.py
ebook-agentes2/cap04/agentic-plataform/paginas/: about_page.py  feedback.py  post.py  search.py  settings.py  translate.py  upload_pdf.py  welcome.py
util/: llm_helper.py
