[project]
name = "aulas-crewai-sandeco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.119.0",
    "crewai-tools>=0.44.0",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.1.1",
    "firecrawl-py>=2.5.4",
    "matplotlib>=3.10.3",
    "python-dotenv>=1.1.0",
    "reportlab>=4.4.2",
    "streamlit>=1.46.1",
    "streamlit-option-menu>=0.4.0",
]
